Client - Create or login user

--- a/Client/index.html
+++ b/Client/index.html
@@ -21,5 +21,9 @@
         </div>
     </div>
 </body>
+<script src="./scripts/functions.js"></script>
+<script src="./scripts/api.js"></script>
+<script src="./scripts/toast.js"></script>
+<script src="./scripts/pages/index.js"></script>
 
 </html>
