Client - Add welcome message

--- a/Client/data.html
+++ b/Client/data.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container column-container">
         <h1>Data</h1>
+        <p id='welcome-msg'></p>
         <button id="logout" class="btn logout" type="button">Logout</button>
         <div class="users"></div>
     </div>
