Client - Add loader

--- a/Client/data.html
+++ b/Client/data.html
@@ -11,7 +11,7 @@
         <h1>Data</h1>
         <p id='welcome-msg'></p>
         <button id="logout" class="btn logout" type="button">Logout</button>
-        <div class="users"></div>
+        <div class="users"><div class='loader'></div></div>
 
         <div id="modal" class="hidden">
             <div class="overlay"></div>
