Client - Style improvements

--- a/Client/data.html
+++ b/Client/data.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container column-container">
-        <h1>Data</h1>
+        <h1> Active Users List </h1>
         <p id='welcome-msg'></p>
         <button id="logout" class="btn logout" type="button">Logout</button>
         <div class="users"><div class='loader'></div></div>
@@ -17,12 +17,12 @@
             <div class="overlay"></div>
             <div class="modal">
                 <div class="close-modal"> X </div>
-                <h1> Just An Example </h1>
-                <span class=""> Name: <p id='name'></p></span>
-                <span class=""> Email: <p id='email'></p></span>
-                <span class=""> User Agent: <p id='user-agent'></p></span>
-                <span class=""> Entrance Time: <p id='entrance-time'></p></span>
-                <span class=""> Visits Counter: <p id='visits-count'></p></span>
+                <h2> User Data </h2>
+                <span class="title"> Name: <label id='name'></label></span>
+                <span class="title"> Email: <label id='email'></label></span>
+                <span class="title"> User Agent: <label id='user-agent'></label></span>
+                <span class="title"> Entrance Time: <label id='entrance-time'></label></span>
+                <span class="title"> Visits Counter: <label id='visits-count'></label></span>
             </div>
         </div>
     </div>
